# kdtree-wasm

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
js/: wrapper.ts
src/: lib.rs
tests/: test.ts
