[package]
name = "kdtree-wasm"
version = "1.0.0"
edition = "2021"
authors = ["aresyy <aresyran@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
kdtree = "0.7.0"
serde = "1.0.189"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
